--- a/css/yardie.css
+++ b/css/yardie.css
@@ -21,7 +21,7 @@
 
 .yardie-table-adj{
     margin-top: -70px;
-    margin-left:-30px;
+    margin-left: 10px;
     margin-right: 50px;
 
 }
@@ -30,14 +30,25 @@
     text-align: center;
 }
 
+body{
+    background-image: url("https://images.unsplash.com/photo-1484659619207-9165d119dafe?ixlib=rb-0.3.5&s=ee387127a3be1d14a9d4b27ea5bf9391&auto=format&fit=crop&w=1350&q=80");
+     -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+        background-size: cover;
+
+}
 .yardie-bg-color{
+    /*
     background-color: #dfe6e9;
+    */
+    
 }
 
 .yardie-reciept-paper{
-    width: 450px;
-    height: 530px;
-    box-shadow: 1px 1px 10px black;
+    width: 800px;
+    height: 650px;
+    box-shadow: 1px 1px 30px black;
     background-color: white;
 }
 
@@ -59,6 +70,11 @@
 
 th, td {
     padding-left:50px;
-    padding-bottom: 5px;
+    padding-bottom: 0px;
     text-align: left;
+
+}
+
+.table.no-border tr td, .table.no-border tr th {
+  border-width: 0;
 }
