--- a/css/yardie.css
+++ b/css/yardie.css
@@ -30,6 +30,7 @@
     text-align: center;
 }
 
+/* Strech background image */
 body{
     background-image: url("https://images.unsplash.com/photo-1484659619207-9165d119dafe?ixlib=rb-0.3.5&s=ee387127a3be1d14a9d4b27ea5bf9391&auto=format&fit=crop&w=1350&q=80");
      -webkit-background-size: cover;
